# SynBIC_PCA_and_Clustering_Workshop

./: 00_introduction_to_PCA.ipynb  01_approaches_to_clustering.ipynb  README.md  pca_env.yml  pyproject.toml  requirements.txt
